--- a/apple-pie/index.html
+++ b/apple-pie/index.html
@@ -5,11 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple Pie Recipe</title>
     <link rel="stylesheet" href="/mnt/c/users/imarcos/Desktop/PizzaBytes/m1-d04-class/lab-css-recipes-clone/apple-pie/styles">
-    
-  <header>
-     <h1>Apple Pie</h1>
-  </header>
   
+  </head>
+
+  <header>
+    <div class ="headerPie">
+       <h1>Apple Pie</h1>
+    </div>
+  </header>
+
   <section1>
     <p>This was my grandmother's apple pie recipe. I have never seen another one quite like it. It will always
     be my favorite and has won me several first place prizes in local competitions. I hope it becomes one of your
